# mip-lab4

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
front/: elm.json  index.html  main.js
front/src/: Main.elm
resources/: test.json  test2.json
src/: main.cpp
src/geometry/: triangle.cpp  vector.h
src/math/: camera.cpp  camera.h  color.cpp  color.h  image.cpp  image.h  intersection.cpp  intersection.h  light_source.cpp  light_source.h  material.cpp  material.h  ray.cpp  ray.h  sampling.h  scene.cpp  scene.h  trace.cpp  trace.h  triangle.cpp  triangle.h  vector.cpp  vector.h
src/rest/: hello_controller.cpp  hello_controller.h  rest_controller.h  scene_controller.cpp  scene_controller.h
src/service/: obj_service.cpp  obj_service.h  ppm_writer.cpp  ppm_writer.h  scene_renderer.cpp  scene_renderer.h
src/vector/: vector.cpp
